client/src/components/volunteering/volunteering-card.scss
/**
 * The volunteering card contains the information for a specific volunteering:
 *
 * 1) The card will be red if it is closed
 * 2) On hover, the box shadow will increase slightly
 * 3) The volunteering filters at the bottom are colored to match a filter
 */

@import '../../custom.scss';

// Relative positioning for the overlay to use absolute positioning
.volunteering-card {
    position: relative;
    width: 9rem;
    height: 7.5rem;

    box-shadow: 0 0 0.3rem $background-tint;
    text-align: center;
    background-color: $background;
    cursor: pointer;
    transition: 0.3s;
}

.volunteering-card:hover {
    box-shadow: 0 0 0.2rem 0.1rem $background-dark;
}

.volunteering-card-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #00000033;
}

// Red tint on closed cards for dark theme
.dark .volunteering-card-overlay {
    background-color: #FF000010;
}

.volunteering-card-content {
    width: 8.5rem;
    height: 7rem;
    padding: 0.25rem;
}

.volunteering-card-status {
    font-size: 0.6rem;
    font-family: $title-font;
}

.volunteering-card-status.open {
    color: $primary;
}

.volunteering-card-status.closed {
    color: $bad;
}

.volunteering-card-name {
    margin: 0.1rem;
    font-family: $title-font;
    font-size: 0.9rem;
    font-weight: 300;
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
}

.volunteering-card-club-name {
    color: $text-light;
    font-size: 0.6rem;
    font-family: $title-font;
    font-weight: 300;
}

.volunteering-card-description {
    margin-bottom: 0.25rem;
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
    font-size: 0.5rem;
    font-weight: 500;
}

.volunteering-card-filter-list {
    font-size: 0.5rem;
    font-weight: 600;
}

.f-limited {
    color: $filter-limited;
}

.f-semester {
    color: $filter-semester;
}

.f-set-times {
    color: $filter-set-times;
}

.f-weekly {
    color: $filter-weekly;
}

